# lightning-whisper-mlx

./: .gitignore  pyproject.toml
lightning_whisper_mlx/: lightning.py  load_models.py  transcribe.py
